Removed device contribution endpoint documentation in swagger yml as they are out of scope for this set of changes. Removed unused swagger inline documentation. Renamed few variables to follow proper style guide
