# docs/swagger.yml
@@ -816,111 +816,6 @@ paths:
                   "status": 400
                 }]
               }'
-  /contributions/devices:
-    get:
-      summary: Get all device contributions
-      tags: [contributions]
-      parameters:
-        - name: filter[name]
-          in: query
-          description: |-
-            Filter all device contributions with exactly this name.
-          required: false
-          type: string
-        - name: filter[ref]
-          in: query
-          description: |-
-            Filter all device contributions with exactly this ref.
-          required: false
-          type: string
-        - name: filter[type]
-          in: query
-          description: |-
-            Filter all device contributions exactly with this type.
-            Useful to get all contributions of either type **`activity`** or **`trigger`**.
-          required: false
-          type: string
-      responses:
-        200:
-          description: Successful response
-          schema:
-            type: object
-            required: ["data"]
-            properties:
-              data:
-                type: array
-                items:
-                  $ref: '#/definitions/Contribution'
-          examples:
-            application/json: |-
-              {
-                "data": [
-                  {
-                    "id": "activity-id",
-                    "ref": "activity-ref",
-                    "homepage": "activity-homepage",
-                    "name": "activity-name",
-                    "type": "flogo:activity",
-                    "version": "0.0.1",
-                    "title": "sometitle",
-                    "inputs": [],
-                    "outputs": []
-
-                  },
-                  {
-                    "id": "trigger-id",
-                    "name": "trigger-name",
-                    "version": "0.0.1",
-                    "title": "trigger-title",
-                    "description": "trigger-description",
-                    "homepage": "trigger-homepage"",
-                    "ref": "trigger-ref",
-                    "settings": [],
-                    "outputs": [],
-                    "handler": {
-                      "settings": []
-                    },
-                    "endpoint": {
-                      "settings": []
-                    },
-                    "reply": []
-                  }
-                ]
-              }
-    post:
-      summary: Install a new device contribution
-      description: |-
-        Installs a contribution (either a **`trigger`** or **`activity`**) to the database
-      tags: [contributions]
-      parameters:
-        - name: data
-          in: body
-          description: Contribution install post data
-          required: true
-          schema:
-            type: object
-            required: ['url', 'type']
-            properties:
-              url:
-                type: string
-                example: 'githubpath'
-              'type':
-                type: string
-                example: 'activity'
-      responses:
-        200:
-          description: list of contribution which are successful and failed to get added to the database
-          schema:
-            type: object
-            properties:
-              success:
-                type: array
-                items:
-                  type: string
-              fail:
-                type: array
-                items:
-                  type: string
 ################################################################################
 #                                 Responses                                    #
 ################################################################################
